# ai-evaluation-workshops

./: .gitignore  LICENSE  OpikOptimizerWorkshop.ipynb  README.md
workshops/2025-convergence-evaluation-playbook/: README.md
workshops/2025-convergence-evaluation-playbook/solution/: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
workshops/2025-convergence-evaluation-playbook/solution/src/evaluation_playbook/: config.py  opik_utils.py
workshops/2025-convergence-evaluation-playbook/solution/src/evaluation_playbook/domain/: prompts.py
workshops/2025-convergence-evaluation-playbook/solution/src/evaluation_playbook/evaluation/: __init__.py  evaluate.py  upload_dataset.py
workshops/2025-convergence-evaluation-playbook/solution/src/evaluation_playbook/rag/: long_term_memory.py
workshops/2025-convergence-evaluation-playbook/solution/src/evaluation_playbook/workflow/: state.py
workshops/2025-convergence-evaluation-playbook/template/: .gitignore  README.md  docker-compose.yml
workshops/2025-convergence-evaluation-playbook/template/tools/: create_long_term_memory.py  upload_evaluation_dataset.py
workshops/odsc-2025-evaluation-playbook/: README.md
workshops/odsc-2025-evaluation-playbook/solution/: Makefile  README.md  pyproject.toml
workshops/odsc-2025-evaluation-playbook/solution/tools/: call_agent.py  create_long_term_memory.py  evaluate_agent.py  upload_evaluation_dataset.py
workshops/odsc-2025-evaluation-playbook/template/: README.md  docker-compose.yml  pyproject.toml
(+35 files in other folders)
