[project]
name = "convergence-2025-evaluation-playbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "datasketch>=1.6.5",
    "langchain-community>=0.3.21",
    "langchain-core>=0.3.54",
    "langchain-huggingface>=0.1.2",
    "langchain-openai>=0.3.14",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.3.31",
    "loguru>=0.7.3",
    "opik>=1.7.9",
    "pydantic-settings>=2.9.1",
    "pydantic>=2.11.3",
    "ruff>=0.11.6",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
    "wikipedia>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evaluation_playbook"]

[tool.ruff]
target-version = "py312"
